[gd_scene load_steps=6 format=3 uid="uid://cniisgepkceri"]

[ext_resource type="Script" path="res://ui/pause_screen/pause_screen.gd" id="1_alcby"]
[ext_resource type="Texture2D" uid="uid://fpvmfd3lsoyh" path="res://ui/buttons/button_normal.png" id="1_ebj2k"]
[ext_resource type="Texture2D" uid="uid://dwlacb7g5p7s3" path="res://ui/buttons/button_hover.png" id="2_ax8ew"]
[ext_resource type="Texture2D" uid="uid://buu1n812c7epc" path="res://ui/buttons/button_pressed.png" id="3_xrphg"]
[ext_resource type="AudioStream" uid="uid://dhegcpoemffxl" path="res://ui/buttons/sounds/click.wav" id="5_5pxdm"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 2
layer = 20
script = ExtResource("1_alcby")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="Buttons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -254.5
offset_right = 250.0
offset_bottom = 254.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_ebj2k")
texture_pressed = ExtResource("3_xrphg")
texture_hover = ExtResource("2_ax8ew")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/ContinueButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -36.0
offset_right = -44.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Continue"

[node name="RestartButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_ebj2k")
texture_pressed = ExtResource("3_xrphg")
texture_hover = ExtResource("2_ax8ew")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/RestartButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -36.0
offset_right = -45.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Restart"

[node name="QuitButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_ebj2k")
texture_pressed = ExtResource("3_xrphg")
texture_hover = ExtResource("2_ax8ew")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/QuitButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -36.0
offset_right = -47.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Quit"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5pxdm")

[connection signal="pressed" from="Buttons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
